--- a/DMS_M306/Content/Site.css
+++ b/DMS_M306/Content/Site.css
@@ -22,3 +22,21 @@ select,
 textarea {
     max-width: 280px;
 }
+.navbar-inverse{
+    background:#A8BCA1;
+    border-color:#2D2D2A;
+}
+
+.navbar-inverse .navbar-nav > li > a{
+    color:#2D2D2A;
+    font-weight:900;
+}
+
+.navbar-inverse .navbar-brand{
+    color:#2D2D2A;
+    font-weight:900;
+    font-size:40px;
+}
+.body-content{
+    padding-top:20px;
+}
