--- a/DMS_M306/Views/Shared/_Layout.cshtml
+++ b/DMS_M306/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("My Profile", "Index", "Home")</li>
                     <li>@Html.ActionLink("Search", "About", "Home")</li>
-                    <li>@Html.ActionLink("NewFile", "Index", "File")</li>
+                    <li>@Html.ActionLink("NewFile", "NewFile", "File")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
