Addes create release

--- a/DMS_M306/Views/File/Details.cshtml
+++ b/DMS_M306/Views/File/Details.cshtml
@@ -45,7 +45,7 @@ id.ToString("####");
 <div class="panel panel-default">
     <div class="panel-heading">
         <b class="lead">Releases</b><span class="pull-right btn-group">
-            <a href="/File/Create" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-plus" data-toggle="tooltip" data-placement="Top" title="Add category"></span></a>
+            <a href="/Release/CreateFor/@Model.Id" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-plus" data-toggle="tooltip" data-placement="Top" title="Add category"></span></a>
         </span>
 
         <div class="clearfix"></div>
