--- a/DMS_M306/Views/Release/CreateFor.cshtml
+++ b/DMS_M306/Views/Release/CreateFor.cshtml
@@ -1,7 +1,30 @@
-﻿
-@{
-    ViewBag.Title = "CreateFor";
+﻿@model DMS_M306.ViewModels.Release.CreateForViewModel
+
+@using (Html.BeginForm("CreateFor", "Release", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Create release for @Model.FileName</h3>
+        </div>
+        <div class="panel-body">
+            <div class="form-horizontal">
+                @Html.HiddenFor(m => m.FileId)
+                <div class="form-group">
+                    <label class="control-label col-md-2" for="BirthDay">@Html.LabelFor(m => m.Description):</label>
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10 col-md-offset-2">
+                        <input type="submit" value="Create" class="btn btn-success" />
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 }
-
-<h2>CreateFor</h2>
-
