--- a/DMS_M306/Views/File/Details.cshtml
+++ b/DMS_M306/Views/File/Details.cshtml
@@ -7,7 +7,7 @@
 
 @helper ReleaseIdFormat(int id)
 {
-id.ToString("####");
+@id.ToString("X6")
 }
 
 @helper DetailRow(string detailName, string detail)
@@ -53,7 +53,7 @@ id.ToString("####");
     <table class="table">
         <tbody>
             <tr>
-                <th>Name</th>
+                <th>ID</th>
                 <th>Description</th>
                 <th>Releases</th>
                 <th>Createt By</th>
@@ -64,7 +64,7 @@ id.ToString("####");
                 foreach (var item in Model.Releases)
                 {
                     <tr>
-                        <td><a href="/File/Details/@item.Id">ReleaseIdFormat(@item.Id)</a></td>
+                        <td><a href="/Release/Details/@item.Id">@ReleaseIdFormat(@item.Id)</a></td>
                         <td>@item.Description</td>
                         <td>@item.LastModifiedBy</td>
                         <td>@item.ReleasedBy</td>
