Fixed PhysicalStorage javascript

--- a/DMS_M306/Views/File/Create.cshtml
+++ b/DMS_M306/Views/File/Create.cshtml
@@ -89,7 +89,7 @@ if (!String.IsNullOrWhiteSpace(ErrorString))
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" id="fileToUploadFields">
                     <label class="control-label col-md-2">File:</label>
                     <div class="col-md-10">
                         <input id="fileToUpload" type="file" class="file form-control" name="fileToUpload">
