--- a/DMS_M306/Views/Shared/_Layout.cshtml
+++ b/DMS_M306/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Files", "Index", "File")</li>
                     <li>@Html.ActionLink("My Profile", "Index", "Home")</li>
                     <li>@Html.ActionLink("Search", "About", "Home")</li>
                     <li>@Html.ActionLink("NewFile", "NewFile", "File")</li>
