Changed Release Details

--- a/DMS_M306/Views/File/Details.cshtml
+++ b/DMS_M306/Views/File/Details.cshtml
@@ -4,78 +4,9 @@
 @{
     ViewBag.Title = "Details";
 }
+@Html.Partial("_FileDetails", Model)
+@Html.Partial("_ReleasesList", Model)
 
-@helper ReleaseIdFormat(int id)
-{
-@id.ToString("X4")
-}
-
-@helper DetailRow(string detailName, string detail)
-{
-    <tr>
-        <th width="160px">@detailName:</th>
-        <td>@detail</td>
-    </tr>
-}
-
-
-
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <b class="lead">Details - @Model.Name</b>
-
-        <div class="clearfix"></div>
-    </div>
-    <table class="table">
-        <tbody>
-            @DetailRow(nameof(Model.Description), Model.Description)
-            @DetailRow(nameof(Model.Category), Model.Category)
-            @DetailRow(nameof(Model.Class), Model.Class.ToString())
-            @DetailRow(nameof(Model.Status), Model.Status.ToString())
-            @DetailRow(nameof(Model.StorageType), Model.StorageType.ToString())
-            @DetailRow(nameof(Model.LastModifiedBy), Model.LastModifiedBy)
-            @DetailRow(nameof(Model.LastModified), Model.LastModified.ToString("dd.MM.yy"))
-            @DetailRow(nameof(Model.CreatedBy), Model.CreatedBy)
-            @DetailRow(nameof(Model.CreateDate), Model.CreateDate.ToString("dd.MM.yy"))
-    </table>
-</div>
-
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <b class="lead">Releases</b><span class="pull-right btn-group">
-            <a href="/Release/CreateFor/@Model.Id" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-plus" data-toggle="tooltip" data-placement="Top" title="Add category"></span></a>
-        </span>
-
-        <div class="clearfix"></div>
-    </div>
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>ID</th>
-                <th>Description</th>
-                <th>Createt By</th>
-                <th>Release Date</th>
-                <th>Released By</th>
-            </tr>
-            @if (Model.Releases != null)
-            {
-                foreach (var item in Model.Releases)
-                {
-                    <tr>
-                        <td><a href="/Release/Details/@item.Id">@ReleaseIdFormat(@item.ReleaseNumber)</a></td>
-                        <td>@item.Description</td>
-                        <td>@item.LastModifiedBy</td>
-                        <td>@item.ReleaseDate.ToString("dd.MM.yy hh:mm")</td>
-                        <td>@item.ReleasedBy</td>
-                    </tr>
-                }
-            }
-        </tbody>
-    </table>
-</div>
 <div class="text-center">
-
     @Html.GenerateFileCode(Model.Id)
 </div>
