Added file edit

--- a/DMS_M306/Views/File/Details.cshtml
+++ b/DMS_M306/Views/File/Details.cshtml
@@ -6,6 +6,7 @@
 }
 @Html.Partial("_FileDetails", Model)
 @Html.Partial("_ReleasesList", Model)
+@Html.Partial("_ChangesList", Model)
 
 <div class="text-center">
     @Html.GenerateFileCode(Model.Id)
