--- a/DMS_M306/Views/Shared/_FileDetails.cshtml
+++ b/DMS_M306/Views/Shared/_FileDetails.cshtml
@@ -50,4 +50,7 @@
                 @FileDownLoadDetails(Model.FileDownloadPath)
             }
     </table>
-</div>
+    <div class="panel-body">
+        <a href="/File/Edit/@Model.Id" class="btn btn-default">Edit</a>
+        </div>
+    </div>
