--- a/DMS_M306/Views/File/Index.cshtml
+++ b/DMS_M306/Views/File/Index.cshtml
@@ -45,7 +45,7 @@ switch (fileType)
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <b class="lead">Newest files</b><span class=" pull-right btn-group">
+        <b class="lead">Newest files</b><span class="pull-right btn-group">
             <a href="/File/Create" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-plus" data-toggle="tooltip" data-placement="Top" title="Add category"></span></a>
         </span>
 
@@ -56,6 +56,7 @@ switch (fileType)
             <tr>
                 <th>Name</th>
                 <th>Description</th>
+                <th>Category</th>
                 <th>Releases</th>
                 <th>Createt By</th>
                 <th>Modified By</th>
@@ -66,6 +67,7 @@ switch (fileType)
                 <tr>
                     <td><a href="/File/Details/@item.Id">@item.Name</a></td>
                     <td>@item.Description</td>
+                    <td>@item.Category</td>
                     <td>@item.ReleaseCount</td>
                     <td>@ClockAndText(item.CreatedBy, item.CreateDate)</td>
                     <td>@ClockAndText(item.LastModifiedBy, item.LastModified)</td>
