Fixed some Release folder bugs

--- a/DMS_M306/Views/FileRelease/CreateFor.cshtml
+++ b/DMS_M306/Views/FileRelease/CreateFor.cshtml
@@ -1,4 +1,4 @@
-﻿@model DMS_M306.ViewModels.Release.CreateForViewModel
+﻿@model DMS_M306.ViewModels.FileRelease.CreateForViewModel
 
 @using (Html.BeginForm("CreateFor", "Release", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
