--- a/DMS_M306/Views/Shared/_ReleaseDetails.cshtml
+++ b/DMS_M306/Views/Shared/_ReleaseDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model DMS_M306.ViewModels.Release.ReleaseDetailsViewModel
+﻿@model DMS_M306.ViewModels.FileRelease.ReleaseDetailsViewModel
 @using DMS_M306.ViewModels.PhysicalStorage
 
 @helper DetailRow(string detailName, string detail)
