--- a/DMS_M306/Views/FileRelease/Details.cshtml
+++ b/DMS_M306/Views/FileRelease/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DMS_M306.ViewModels.Release.ReleaseDetailsViewModel
+﻿@model DMS_M306.ViewModels.FileRelease.ReleaseDetailsViewModel
 
 @using DMS_M306.Helpers
 
