--- a/DMS_M306/Views/FileRelease/CreateFor.cshtml
+++ b/DMS_M306/Views/FileRelease/CreateFor.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DMS_M306.ViewModels.FileRelease.CreateForViewModel
 
-@using (Html.BeginForm("CreateFor", "Release", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("CreateFor", "FileRelease", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div class="panel panel-default">
         <div class="panel-heading">
