--- a/DMS_M306/Views/Shared/_Layout.cshtml
+++ b/DMS_M306/Views/Shared/_Layout.cshtml
@@ -22,9 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Files", "Index", "File")</li>
-                    <li>@Html.ActionLink("My Profile", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Search", "About", "Home")</li>
-                    <li>@Html.ActionLink("NewFile", "NewFile", "File")</li>
+                    <li>@Html.ActionLink("Categories", "Index", "Category")</li>
+                    <li>@Html.ActionLink("Find File", "Index", "Scan")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
