--- a/DMS_M306/Content/Site.css
+++ b/DMS_M306/Content/Site.css
@@ -1,7 +1,11 @@
-﻿body {
+﻿    body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
+
+    .qrcode-corner img{
+        height:30px;
+    }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
