Changed 12h format to 24h

--- a/DMS_M306/Views/File/Index.cshtml
+++ b/DMS_M306/Views/File/Index.cshtml
@@ -3,7 +3,7 @@
 
 @helper ClockAndText(string text, DateTime date)
 {
-    @text <i class="glyphicon glyphicon-time" data-toggle="tooltip" data-placement="Top" title="@date.ToString("dd.MM.yy hh:mm")"></i>
+    @text <i class="glyphicon glyphicon-time" data-toggle="tooltip" data-placement="Top" title="@date.ToString("dd.MM.yy HH:mm")"></i>
 }
 
 @helper StatusIcon(FileStatus filestatus)
