--- a/DMS_M306/Views/Shared/_ChangesList.cshtml
+++ b/DMS_M306/Views/Shared/_ChangesList.cshtml
@@ -17,7 +17,7 @@
                 foreach (var item in Model.Changes)
                 {
                     <tr>
-                        <td>@item.ChangeDate.ToString("dd.MM.yy hh:mm")</td>
+                        <td>@item.ChangeDate.ToString("dd.MM.yy HH:mm")</td>
                         <td>@item.ChangedBy</td>
                         <td>@item.Description</td>
                     </tr>
