Fixed some bugs

--- a/DMS_M306/Views/Category/Create.cshtml
+++ b/DMS_M306/Views/Category/Create.cshtml
@@ -25,7 +25,7 @@
 
                 <div class="form-group">
                     <div class="col-md-10 col-md-offset-2">
-                        <input type="submit" value="Upload" class="btn" />
+                        <input type="submit" value="Create" class="btn btn-success" />
                     </div>
                 </div>
             </div>
